2026-02-13T01:22:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21970980226 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 1638 / 1161 1641
* notice: next accum: outdated-unq outdated-all / unq all: 1158 1638 / 1161 1641
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-19 2026-01-20] / []

2026-02-10T01:29:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21847948573 # 873
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-10
* notice: last 14d: unq all: 3 3
* notice: prev accum: outdated-unq outdated-all / unq all: 1158 1638 / 1171 1654
* notice: next accum: outdated-unq outdated-all / unq all: 1158 1638 / 1161 1641
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-08T01:50:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790376095 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 13 16
* notice: prev accum: outdated-unq outdated-all / unq all: 1157 1637 / 1160 1640
* notice: next accum: outdated-unq outdated-all / unq all: 1158 1638 / 1171 1654
* notice: prev exec diff / last date diff / accum: unq all: +11 +14 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2026-01-19 2026-01-20 2026-01-21 2026-01-22 2026-01-23] / [2026-02-05 2026-02-06]

2026-02-05T02:41:01Z: