@@ -1,3 +1,12 @@
+2026-02-16T01:19:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22046912417 # 879
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
+* notice: last 14d: unq all: 13 16
+* notice: prev accum: outdated-unq outdated-all / unq all: 1158 1638 / 1161 1641
+* notice: next accum: outdated-unq outdated-all / unq all: 1159 1639 / 1172 1655
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23] / []
+
 2026-02-13T01:22:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21970980226 # 876
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
